# SkratchRast

./: .clang-format  .gitignore  CMakeLists.txt  fileimg.ppm  main.c
.cache/clangd/index/: arena_allocator.c.3A07AB507C9EC823.idx  arena_allocator.c.8DF56A969FD5C1F4.idx  arena_allocator.h.D9E9C0DA8E57CD52.idx  dyn_arr.h.97AB03EC4CD57BEB.idx  heap_allocator.c.139BFE9B192C264E.idx  heap_allocator.c.7DB6A8778E8AB035.idx  heap_allocator.h.473796EFC2736F6E.idx  main.c.2A25D9C9DD94E16B.idx  ppm.c.B582ED5D37F38230.idx  ppm.h.23F20C09CC79543C.idx
memory/: arena_allocator.c  heap_allocator.c
src/: camera.c  camera.h  helpers.h  mat4f.c  mat4f.h  mesh.c  mesh.h  obj_reader.c  obj_reader.h  ppm.c  ppm.h  quaternion.c  quaternion.h  transform.c  transform.h  vec3f.c  vec3f.h  vec4f.c  vec4f.h
src/containers/: dyn_arr.h
src/memory/: arena_allocator.c  arena_allocator.h  heap_allocator.c  heap_allocator.h
